static/css/base.css
/* Universal Styles */
html {
    height: 100%;
}

body {
    font-family: 'Inter';
    color: #30323d;
}

h2,
h3,
h4 {
    font-family: 'Akshar';
    text-transform: uppercase;
}

.caption {
    color: #666;
    text-transform: revert;
}

.modal-header {
    border-bottom: none !important;
}

.modal-footer {
    border-top: none !important;
}

.basket-summary {
    border: 1px solid #e5e5e5;
    padding: 20px;
    margin-bottom: 20px;
    border-radius: 4px;
}

.basket-summary p {
    margin-bottom: 0;
}

.custom-size {
    text-transform: uppercase;
}


/* Modified from GymFit, details in README */
.form-control:focus, 
.form-control:active,
.form-check-input:focus, 
.form-check-input:active,
.form-select:focus,
.form-select:active {
  box-shadow: 0 1px 3px 0 #cfd7df;
  border: 1px solid #529afe;
}

.update-link,
.remove-item {
    cursor: pointer;
}

/* Toasts */
.message-container {
    position: absolute;
    top: 72px;
    right: 15px;
    z-index: 9999999999;
}

.message-container i {
    margin-right: 10px;
}

#toast-button {
    width: 100%;
}

/* Modified from Surfdome */
.promo-div {
    padding: 20px 25px;
    margin: 15px 0;
    text-align: center;
    background-color: #f8f7f5;
    font-size: 1.1rem;
    border-radius: 4px;
}

/* Links and buttons */
a {
    text-decoration: none;
}

button:hover,
.btn-grey:hover {
    color: #fff !important;
    border-color: #feb751;
    background-color: #feb751;
}

.btn-blue {
    background-color: #529afe;
    color: #fff;
    text-transform: uppercase;
    border: 1px solid #529afe;
    border-radius: 0.25rem;
}

.btn-blue:hover {
    color: #529afe !important;
    background-color: #fff;
    border-color: #529afe;
}

.btn-grey {
    border: 1px solid #30323d;
    background-color: #30323d;
    color: #fff !important;
    border-radius: 0.25rem;
    text-transform: uppercase;
}

.btn-danger {
    text-transform: uppercase !important;
}

.basket-buttons {
    width: 100%;
    margin-bottom: 20px;
}

/* Navbar */
#logo {
    font-family: 'Source Sans Pro';
    color: #529afe;
    text-transform: lowercase;
    font-weight: 700;
}

.nav-options {
    text-transform: uppercase;
    font-family: sans-serif;
    font-weight: 500;
}

.nav-item {
    margin: 0 5px;
}

.nav-link,
.icons i {
    color: #30323d !important;
}

.navbar-light .navbar-nav .nav-link:hover {
    color: #feb751 !important;
}

.dropdown-menu {
    border: none;
}

button.navbar-toggler {
    padding: 0.15rem 0.55rem;
    font-size: 1rem;
}

button.navbar-toggler:hover {
    background-color: #fff !important;
}


#delivery-banner {
    background-color: #feb751;
    padding-top: 5px;
}

/* Footer */
footer {
    bottom: 0;
    background-color: #30323d;
    color: #fff;
    padding: 20px;
}

footer a {
    color: #fff !important;
    margin: 0 3px;
}

footer h4 {
    text-transform: uppercase;
}

footer a:hover {
    color: #feb751;
}

/* Media Queries */
@media (max-width: 425px) {
    .action-buttons {
        margin-top: 15px;
    }
}

@media (max-width: 991px) {
    .header-container {
        padding-top: 180px;
    }

    .nav-link i,
    .fas.fa-solid.fa-shopping-basket,
    sup {
        color: #fff !important;
    }

    #top-nav {
        background-color: #30323d;
    }
}

@media (min-width: 992px) {
    .header-container {
        padding-top: 224px;
    }
}

